Fix timer version mobile

--- a/css/app.css
+++ b/css/app.css
@@ -83,7 +83,7 @@ button:hover{
 
 #temps {
     position: absolute;
-    font-size: 2em;
+    font-size: 4em;
     margin-top: 1em;
     font-weight: bold;
     margin-left: 10em;
